lexmark almost done

--- a/lexmark.html
+++ b/lexmark.html
@@ -83,59 +83,69 @@
 					</div>
 			</div>
 			<div class= "row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4 class="subheading">Project Context</h4>
 					<p> As an intern, I independently led a user-centered design project to redesign ServiceNow, an internal service tool for Lexmark employees to submit requests for any items or services they need. I supported design decisions with user research and increased the goal success rate among the 10 most common tasks on the platform by 36%.</p>
-				<br>
-				<br>
-				<br>
-				<br>
-				<hr>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+				</div>
+			</div>
+		</section>
+
+		<section id="lexmark1">
+			<div class="container">
 				<br>
 				<br>
 				<br>
 				<br>
 				<br>
 			<div class="row">
-				<div class="col">
-					<h3>My work was important because...</h3>
+				<div class="col-lg-12 col-md-12 col-sm-12">
+					<h3>Why did ServiceNow need to be redesigned?</h3>
+					<br>
 					<br>
 					<br>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay="0.6s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay="0.4s">
 					<img src="images/lexmarkpersona1.png" alt="manager">
 					<h4>Manager</h4>
-					<p>"I rather place my requests over the phone because the forms online are such a pain"</p>
+					<p>"I rather place my requests over the phone because the forms online are extensive and ask for so much detail"</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay="0.9s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay="0.6s">
 				 	<img src="images/lexmarkpersona2.png" alt= "Administrative Assistant">
 					<h4>Administrative Assistant</h4>
-					<p>"There have been times I thought my request was in progress but I submitted the wrong form"</p>
+					<p>"I would have to wait weeks before being notified I submitted the wrong form. The forms sound so similar"</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay="1s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay=".8s">
 				<img src="images/lexmarkpersona3.png" alt= "ServiceNow Team">
 					<h4>ServiceNow Team</h4>
-					<p>"Trying to redirect wrong forms take up a lot of our team's time...and ugh the phone calls"</p>
+					<p>"Trying to redirect wrong forms take up a lot of our team's time... and the phone calls are overwhelming"</p>
 				</div>
 			</div>
+			<br>
+			<br>
+			<br>
+					<br><br>
 		</div>
 </section>
-<hr>
 
 
 <!-- about section -->
 <section id="about">
 	<div class="container">
 		<div class= "row">
-			<div class="col">
+			<div class="col-lg-12 col-md-12 col-sm-12"><br>
 				<h3>Design Process</h3><br><br>
 			</div>
 		</div>
 	<div class= "row">
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-					<h4>Understand</h4>
+			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+					<h4 style="font-family: 'Quicksand', sans-serif;">Understand</h4>
 					<li>Meet with ServiceNow Team Manager</li>
           <li>Meet with Developer</li>
           <li>Meet with ServiceNow Team Member</li>
@@ -143,69 +153,100 @@
           <li>Baseline User Testing/Interview</li>
           <li>Analyze Pain Points</li>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
-					<h4>Explore</h4>
+			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+					<h4 style="font-family: 'Quicksand', sans-serif;">Explore</h4>
 					<li>Card Sorting</li>
           <li>Develop Design Concept</li>
           <li>Design Review & Revise Concept#1</li>
           <li>Meet with ServiceNow Manager & Developer</li>
           <li>Design Review & Revise Concept #2</li>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-					<h4>Materialize</h4>
+			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".8s">
+					<h4 style="font-family: 'Quicksand', sans-serif;">Materialize</h4>
 					<li>Prototype</li>
 		      <li>New Design User Testing/Interview</li>
 		      <li>Revise Prototype</li>
 		      <li>Documentation for Developer Hand-Off</li>
 			</div>
 		</div>
+		<br>
+		<br>
+		<br>
+
 	</div>
 </section>
-<br>
-<hr>
+
+<br><br><br>
 
 
 <!-- team section -->
-	<section>
+	<section id="lexmark2">
 		<div class="container">
 			<div class="row">
-				<div class="col">
-					<br><br><br>
+				<div class="col-lg-12 col-md-12 col-sm-12">
+					<br><br><br><br><br>
         	<h3>Solutions at Glance</h3>
       	</div>
 			</div>
 			<div class="row">
-      	<div class="col">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 					<p>Between the old and new design, I saw a 36% overall increase in success rates among 10 common tasks on ServiceNow. I achieved this improvement by changing the information architecture and redesigning the request forms. Being able to support my design decisions with an understanding of employees' needs, frustrations, and existing mental models led to drastic changes.</p><br><br>
       	</div>
 			</div>
 			<div class="row">
-      	<div class="col">
+				<div class="col-lg-12 col-md-12 col-sm-12">
         	<h4>  Example of Improved Information Architecture</h4>
       		<br>
 				</div>
-        <img src="images/overview.png" class="img-responsive">
-      	<br><br><br>
 			</div>
+
 			<div class="row">
-      	<div class="col">
-        	<h4>  Example of Improved Form Design</h4>
-					<br>
-      	</div>
-        <img src="images/formoverview.png" class="img-responsive">
-    		</div>
-				<br>
-				<br>
-				<br>
-				<br>
-			</div>
-  	</div>
-		<hr>
+					<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+							<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
+							<img src="images/olddropdown2.png" class="img-responsive" style="max-width:100%"><br>
+					</div>
+					<div class="col-lg-8 col-md-8 col-sm-8 wow fadeInUp" data-wow-delay="0.6s">
+							<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
+							<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%"><br>
+					</div>
+				</div>
+
+				<div class= "row">
+					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay=".8s">
+							<h4 style="font-family: 'Quicksand', sans-serif;">The Changes</h4>
+							<p>The previous design allowed employees to click on request forms that did not even handle their location.<br>
+							e.g. A request form titled "Security" only allowed for security requests in Zhuhai, China. Employees would not know that until they have already clicked on the request form with intentions to submit that form. <br>
+						The new design allows employees to begin with their location and the system only displays the relevant request forms to their location.</p>
+					</div>
+				</div>
+				<br><br><br>
+
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+	        	<h4>  Example of Improved Form Design</h4>
+	      		<br>
+					</div>
+				</div>
+
+				<div class="row">
+						<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
+								<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
+								<img src="images/formoverview.png" class="img-responsive" style="max-width:100%"><br>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+								<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
+								<img src="images/formoverviewcopy.png" class="img-responsive" style="max-width:100%"><br>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay=".8s">
+								<h4 style="font-family: 'Quicksand', sans-serif;">The Changes</h4>
+								<p>1 Employees did not know what "Amia" or "Leap" meant. The new design has a help icon for more information. <br><br>
+								2 Standard cube sizing was not consisntent in the old design. The new design instead asks a separate question entirely, and even gives employees the option to ask for help. <br><br>
+							3 An employee can choose either a single monitor or dual monitor but not both. The new design no longer ha checkboxes and instead uses radio buttons.</p></div>
+					</div><br><br><br><br><br>
 	</section>
 
 	<section id="about">
 		<div class="container">
-			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
 					<h1 class="heading bold">Phase 1: Understand</h1>
 	     </div>
@@ -216,42 +257,46 @@
 	<section>
 			<div class="container">
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 					<h3>Meetings with Stakeholders</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
 				  <h4>01 ServiceNow Team Manager</h4>
 				  <li>"Time is the most precious resource people have."</li>
 				  <li>"ServiceNow was created under significant time constraints and we did not have time for user research."</li>
-				  <br>
-				  <h4>02 Developer</h4>
-				  <li>"ServiceNow can't update forms with each keystroke."</li>
-				  <li>"Information that can be auto-populated are info that can be pulled from PeopleSoft."</li>
-				  <li>"Besides that, ServiceNow is pretty flexible and I can't think of any technical limitations."... <em>this claim will not be supported later on </em>😅</li>
-				  <br>
+			<br></div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+					<h4>02 Developer</h4>
+ 				 <li>"ServiceNow can't update forms with each keystroke."</li>
+ 				 <li>"Information that can be auto-populated are info that can be pulled from PeopleSoft."</li>
+ 				 <li>"Besides that, ServiceNow is pretty flexible and I can't think of any technical limitations."... <em>this claim will not be supported later on </em>😅</li>
+ 				<br></div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.8s">
 					<h4>03 ServiceNow Request Handler</h4>
-				  <li>A rundown on what information was absolutely necessary on the request forms.</li>
-				  <li>A brief demo on how ServiceNow actually works.</li>
-				  <li>Ask for any existing data.</li>
-				  <br>
-					<br>
-					<br>
-					<br>
-						<hr>
-				</div>
+					<li>A rundown on what information was absolutely necessary on the request forms.</li>
+					<li>A brief demo on how ServiceNow actually works.</li>
+					<li>Ask for any existing data.</li>
+					<br></div>
 			</div>
 		</div>
 	</section>
 
-	<section>
+	<section id="lexmark3">
 		<div class="container">
 			<div class="row">
-					<div class="col">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 						<br><br><br>
 						<h3>Roadblock!</h3>
-					</div>
 											 <p>I was interested in learning about the request forms' conversion rates, bounce rates, frequency of different requests, etc but they were not available. The only collected data were the following:<br>
 	                    <li>4177 service requests in the past 12 months</li>
 	                    <li>Majority of requests "seemed" to be maintenance requests</li></p>
-				               <br><br><br><hr>
+				               <br><br><br>
 
 	    </div>
 	  </div>
@@ -296,7 +341,7 @@
 		<section>
 			<div class="container">
 				<div class="row">
-					<div classs= "col">
+					<div class="col-lg-12 col-md-12 col-sm-12">
 					<h3>Developing First Design Concept</h3>
 				</div>
 					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
@@ -331,17 +376,18 @@
 		</div>
 
 	</div>
-		<div class="col">
+	<div class="col-lg-12 col-md-12 col-sm-12">
 			<h4><br><br><br>In the new design, the most complex form can be submitted in four clicks rather than seven.</h4>
 
 			<img src="images/firstflow.png" class="img-responsive">		<br>
-<br><br><br><hr>
+<br><br><br>
 		</div>
 		</div>
 		</div>
 	</section>
 
 
+<section id="lexmark4">
 	<div class="container">
 		<br><br><br>
 <div class= "row">
@@ -355,12 +401,12 @@
                 <img src="images/appearonselect.png" class="img-responsive" style="max-width:80%"><br><br><br>
 							</div>
 						</div>
-<hr>
           </div>
+				</section>
 
 					<div class="container">
 						<div class="row">
-							<div class="col">
+							<div class="col-lg-12 col-md-12 col-sm-12">
 
 									<h3>ServiceNow Team's Manager & Developer Approval</h3>
 								</div>
@@ -370,7 +416,8 @@
 							 <h4>Takeaways & Roadblock</h4>
 							 <li>Showing initial prototypes on Axure made it really easy for the stakeholders to see how effective my changes would be.</li>
 							 <li>The developer informed me that three column design in forms was not technically possible. A technical limitation that I did not know about was brought to light!😱 </li><br>
-							 <div class="col">
+						 </div>
+						  <div class="col-lg-12 col-md-12 col-sm-12">
 								 <h4>Design Goals for Iteration #2</h4>
 								 <li>Convert 3 column design(can be seen below) to 2 columns(pictured on right).</li>
 								 <li>Add more possible auto-population.</li><br><br>
@@ -387,15 +434,18 @@
 				              </div>
 				            </div>
 				          </div>
-									<hr>
 
+								<section id="lexmark5">
 
 									<div class="padding">
 								             <div class="container">
-								               <div class="col">
+															 <div class="row">
+															 <div class="col-lg-12 col-md-12 col-sm-12">
 																 <br><br><br>
 								                 <h3>Design review & Revisions #2</h3>
 								               </div>
+														 </div>
+														 <div class="row">
 								             	<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
 								                 <li>Final walk through of the concept</li>
 								                 <li>Devoted time working on strings! </li>
@@ -406,6 +456,7 @@
 								             </div>
 													 </div>
 								           </div>
+												 </section>
 
 													 <section id="about">
 													 	<div class="container">
@@ -420,10 +471,10 @@
 														<section>
 														 <div class="container">
 															 <div class="row">
-								                 <div class="col">
+																 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <h3>Data Collection for New Design</h3>
 								                 </div>
-								                 <div class="col">
+																 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <h4>User testing of new design showed a 36% improvement!</h4>
 								                   <img src="images/newdata.png" class="img-responsive" style="max-width:50%"><br>
 
@@ -434,13 +485,14 @@
 								               </div>
 								             </div>
 													 </section>
-<section>
+<section id="lexmark6">
 								             <div class="padding">
 								               <div class="container">
-								                   <div class="col">
+																 <div class="row">
+																 <div class="col-lg-12 col-md-12 col-sm-12">
 								                     <h3><br><br>Takeaways</h3>
 								                   </div>
-								                   <div class="col">
+																	 <div class="col-lg-12 col-md-12 col-sm-12">
 
 								                   <li>When designing a product,experience should come first. Otherwise, be prepared for more time and cost being spent on the project down the road.</li>
 								                   <li>To help users understand where they are and locate what they are searching for, be contextual,transparent, and approachable.</li>
