--- a/lexmark.html
+++ b/lexmark.html
@@ -101,7 +101,6 @@
 				<br>
 				<br>
 				<br>
-				<br>
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<h3>Why did ServiceNow need to be redesigned?</h3>
@@ -139,8 +138,8 @@
 <section id="about">
 	<div class="container">
 		<div class= "row">
-			<div class="col-lg-12 col-md-12 col-sm-12"><br>
-				<h3>Design Process</h3><br><br>
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<h3>DESIGN PROCESS</h3><br>
 			</div>
 		</div>
 	<div class= "row">
@@ -171,7 +170,6 @@
 		</div>
 		<br>
 		<br>
-		<br>
 
 	</div>
 </section>
@@ -185,7 +183,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<br><br><br><br><br>
-        	<h3>Solutions at Glance</h3>
+        	<h3>SOLUTIONS AT GLANCE</h3>
       	</div>
 			</div>
 			<div class="row">
@@ -201,22 +199,19 @@
 			</div>
 
 			<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+					<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
 							<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
 							<img src="images/olddropdown2.png" class="img-responsive" style="max-width:100%"><br>
 					</div>
-					<div class="col-lg-8 col-md-8 col-sm-8 wow fadeInUp" data-wow-delay="0.6s">
+					<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
 							<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
 							<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%"><br>
 					</div>
-				</div>
-
-				<div class= "row">
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay=".8s">
-							<h4 style="font-family: 'Quicksand', sans-serif;">The Changes</h4>
-							<p>The previous design allowed employees to click on request forms that did not even handle their location.<br>
-							e.g. A request form titled "Security" only allowed for security requests in Zhuhai, China. Employees would not know that until they have already clicked on the request form with intentions to submit that form. <br>
-						The new design allows employees to begin with their location and the system only displays the relevant request forms to their location.</p>
+					<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay=".8s">
+							<h4 style="font-family: 'Quicksand', sans-serif;">Design Changes</h4>
+							<p>1. The new design allows employees to begin with their location and the system only displays the relevant requests forms for the selected location.<br>
+								<br>
+						2. The drop down interaction for form selection is replaced with cards that have description for each form.</p>
 					</div>
 				</div>
 				<br><br><br>
@@ -239,16 +234,16 @@
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-3 wow fadeInUp" data-wow-delay=".8s">
 								<h4 style="font-family: 'Quicksand', sans-serif;">The Changes</h4>
-								<p>1 Employees did not know what "Amia" or "Leap" meant. The new design has a help icon for more information. <br><br>
-								2 Standard cube sizing was not consisntent in the old design. The new design instead asks a separate question entirely, and even gives employees the option to ask for help. <br><br>
-							3 An employee can choose either a single monitor or dual monitor but not both. The new design no longer ha checkboxes and instead uses radio buttons.</p></div>
+								<p>1. Employees did not know what "Amia" or "Leap" meant. The new design has  help icons for more information. <br><br>
+								2. Standard cube sizing was not consisntent in the old design. The new design instead asks a separate question entirely, and even gives employees the option to ask for help. <br><br>
+							3. An employee can choose either a single monitor or dual monitor but not both. The new design no longer has checkboxes and instead uses radio buttons to prevent multiple options being selected.</p></div>
 					</div><br><br><br><br><br>
 	</section>
 
 	<section id="about">
 		<div class="container">
 				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Phase 1: Understand</h1>
+					<h1 class="heading bold">Phase 1 of 3: Understand</h1>
 	     </div>
 		 </div>
 		 <div>
@@ -258,18 +253,18 @@
 			<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>Meetings with Stakeholders</h3>
+					<h3>STAKEHOLDER MEETINGS</h3>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 				  <h4>01 ServiceNow Team Manager</h4>
 				  <li>"Time is the most precious resource people have."</li>
 				  <li>"ServiceNow was created under significant time constraints and we did not have time for user research."</li>
 			<br></div>
 			</div>
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 					<h4>02 Developer</h4>
  				 <li>"ServiceNow can't update forms with each keystroke."</li>
  				 <li>"Information that can be auto-populated are info that can be pulled from PeopleSoft."</li>
@@ -277,11 +272,11 @@
  				<br></div>
 			</div>
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.8s">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 					<h4>03 ServiceNow Request Handler</h4>
 					<li>A rundown on what information was absolutely necessary on the request forms.</li>
 					<li>A brief demo on how ServiceNow actually works.</li>
-					<li>Ask for any existing data.</li>
+					<li>Ask for any existing data.</li><br><br><br><br>
 					<br></div>
 			</div>
 		</div>
@@ -292,12 +287,10 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 						<br><br><br>
-						<h3>Roadblock!</h3>
+						<h3>ROADBLOCK</h3>
 											 <p>I was interested in learning about the request forms' conversion rates, bounce rates, frequency of different requests, etc but they were not available. The only collected data were the following:<br>
 	                    <li>4177 service requests in the past 12 months</li>
-	                    <li>Majority of requests "seemed" to be maintenance requests</li></p>
-				               <br><br><br>
-
+	                    <li>Majority of requests "seemed" to be maintenance requests</li></p><br><br><br><br>
 	    </div>
 	  </div>
 	</section>
@@ -305,9 +298,10 @@
 	<section>
 		<div class="container">
 			<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-						<h3>User Testing</h3>
+					<div class="col-lg-12 col-md-12 col-sm-12">
+						<br><br><br><h3>USER TESTING</h3>
 						<p>Because there was hardly any data, I wanted to gather my own. Although specific quantitative data such as bounce rates would have been useful, I had limited time at Lexmark. With the limited time available, I decided to do user testing and collect success rates on 10 most common tasks.</p>
+						<div class="wow fadeInUp" data-wow-delay="0.4s">
 								<ol>1. After work-hours, items from people’s cubicles are disappearing. The group decides to install security cameras. Please submit a request.																									</ol>
 								<ol>2. You have lower back pain that prevents you from sitting for more than 15 minutes straight. Please submit a request for a stand-up desk.		</ol>
 								<ol>3. You are a manager who wants to break the wall between two small meeting rooms and make it into one medium sized meeting room. Please submit a request.		</ol>
@@ -317,8 +311,9 @@
 								<ol>7. In your office, there is a 15ft x 5ft sized whiteboard hung up. It needs to be relocated into a different room. Please submit a request.																									</ol>
 								<ol>8. You want to move a couch out of your office. Please submit a request.																									</ol>
 								<ol>9. A cabinet has been in your office for the last ten years. You want to get it opened, but it is locked. Please submit a request																									</ol>
-								<ol>10. You have highly sensitive documents and you need a padlock for your door. Please submit a request.		</ol><br>
-								 <img src="images/baselinedata.png" class="img-responsive center" style="max-width:90%">
+								<ol>10. You have highly sensitive documents and you need a padlock for your door. Please submit a request.		</ol><br></div>
+									<div class="wow fadeInUp" data-wow-delay="0.6s">
+								 <img src="images/baselinedata.png" class="img-responsive center" style="max-width:90%"></div>
 								<br><br>
 
 			</div>
@@ -332,7 +327,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Phase 2: Explore</h1>
+					<h1 class="heading bold">Phase 2 of 3: Explore</h1>
 		      </div>
 				</div>
 			</div>
@@ -342,40 +337,55 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>Developing First Design Concept</h3>
+					<h3>FIRST DESIGN CONCEPT</h3>
 				</div>
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+					<div class="col-lg-12 col-md-12 col-sm-12">
 						<h4>Example pain points in old design & design decisions to address them</h4>
-		<p>01</p>
-	<div class="row">
-		<div class="col-sm-6">
-			<p>Old Design<br>When requesting a security camera,"Site Operations Security Request" seems like a great option (Left Image #2, first View Details box), until you click on the form and realize it's only for location in Zhuhai, China.</p>
+					</div>
+				</div>
+				<div class="row wow fadeInUp" data-wow-delay="0.4s">
+					<div class="col-lg-2 col-md-2 col-sm-2">
+						<p>01</p>
+					</div>
+		<div class="col-lg-5 col-md-5 col-sm-5">
+			<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
+			<p>When requesting a security camera,"Site Operations Security Request" seems like a great option, until you click on the form and realize it's only for location in Zhuhai, China.</p>
 		</div>
-		<div class="col-sm-6">
-			<p>New Design<br>Came up with a design that prioritizes location(Right Image #1) first to cut out any unnecessary searching behaviors.</p>
-		</div>
-	</div>
-	<br>
-		<p>02</p>
-	<div class="row">
-		<div class="col-sm-6">
-			<p>Old Design<br>For an ergonomic furniture request, there is a list of options to select however, not everyone knows what each option means and options that are either/or are checkboxes which allow for multiple selections. </p>
-		</div>
-		<div class="col-sm-6">
-			<p>New Design<br>Make the information digestible, offer categories, use radio buttons rather than checkboxes, and offer help where needed with help icons.</p>
+		<div class="col-lg-5 col-md-5 col-sm-5">
+			<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
+			<p>Came up with a design that prioritizes location first to cut out any unnecessary searching behaviors.</p>
 		</div>
 	</div>
-	<br>
-		<p>03</p>
-	<div class="row">
-		<div class="col-sm-6">
-			<p>Old Design<br>For the overall request selection process, the titles for each request were not clear or sometimes not representative of the request forms. For example, "Badge Reader-Security Lexington" request had more options besides a badge reader, but an employee would not know that from the current design.</p>
-		</div>
-		<div class="col-sm-6">
-			<p>New Design<br>Came up with a design that had helper text(right image #3) for each request form</p>
-		</div>
 
+	<div class="row wow fadeInUp" data-wow-delay="0.6s">
+		<div class="col-lg-2 col-md-2 col-sm-2">
+			<p>02</p>
+		</div>
+		<div class="col-lg-5 col-md-5 col-sm-5">
+			<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
+			<p>For an ergonomic furniture request, there is a list of options to select however, not everyone knows what each option means and options that are either/or are checkboxes which allow for multiple selections.
+		</div>
+		<div class="col-lg-5 col-md-5 col-sm-5">
+			<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
+			<p>Make the information digestible, offer categories, use radio buttons rather than checkboxes, and offer help where needed with help icons.</p>
+		</div>
 	</div>
+	<div class="row wow fadeInUp" data-wow-delay="0.8s">
+		<div class="col-lg-2 col-md-2 col-sm-2">
+<p>03</p>
+</div>
+<div class="row">
+<div class="col-lg-5 col-md-5 col-sm-5">
+<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
+<p>For the overall request selection process, the titles for each request were not clear or sometimes not representative of the request forms. For example, "Badge Reader-Security Lexington" request had more options besides a badge reader, but an employee would not know that from the current design.</p>
+</p>
+</div>
+<div class="col-lg-5 col-md-5 col-sm-5">
+<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
+<p>Came up with a design that had helper text(right image #3) for each request form.</p>
+</div>
+</div>
+<br>
 	<div class="col-lg-12 col-md-12 col-sm-12">
 			<h4><br><br><br>In the new design, the most complex form can be submitted in four clicks rather than seven.</h4>
 
@@ -391,11 +401,12 @@
 	<div class="container">
 		<br><br><br>
 <div class= "row">
-
+	<div class="col-lg-12 col-md-12 col-sm-12">
 					<h3>Design Review & Revisions #1</h3>
 				</div>
+			</div>
 				<div class= "row">
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+					<div class="col-lg-12 col-md-12 col-sm-12">
 					<h4>Main Takeaways</h4><p>Forms do not always have to display all the information at first load. This got me thinking about how I can incorporate interactions that were dynamic to clean up the forms. Up until this point, I was using XD to do the mockups but decided to move to Axure for prototyping because of its capabilities for including dynamic interactions.</p><br>
                <h4>Example of dynamic interaction on form</h4>
                 <img src="images/appearonselect.png" class="img-responsive" style="max-width:80%"><br><br><br>
@@ -408,9 +419,9 @@
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12">
 
-									<h3>ServiceNow Team's Manager & Developer Approval</h3>
+									<br><br><br><br><h3>ServiceNow Team's Manager & Developer Approval</h3>
 								</div>
-							<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+							<div class="col-lg-12 col-md-12 col-sm-12">
 								<br>
 
 							 <h4>Takeaways & Roadblock</h4>
@@ -420,7 +431,7 @@
 						  <div class="col-lg-12 col-md-12 col-sm-12">
 								 <h4>Design Goals for Iteration #2</h4>
 								 <li>Convert 3 column design(can be seen below) to 2 columns(pictured on right).</li>
-								 <li>Add more possible auto-population.</li><br><br>
+								 <li>Add more possible auto-population.</li><br>
 </div>
 								 <div class="col-sm-6">
 									 <h4>Iteration #1</h4>
@@ -430,7 +441,7 @@
 									 <div class="col-sm-6">
 										 <h4>Iteration #2</h4>
 
-										 <img src="images/furnituremove.png" class="img-responsive"><br><br><br>
+										 <img src="images/furnituremove.png" class="img-responsive"><br><br><br><br><br>
 				              </div>
 				            </div>
 				          </div>
@@ -441,17 +452,17 @@
 								             <div class="container">
 															 <div class="row">
 															 <div class="col-lg-12 col-md-12 col-sm-12">
-																 <br><br><br>
-								                 <h3>Design review & Revisions #2</h3>
+																 <br><br><br><br><br>
+								                 <h3>Design review & Revisions #2</h3><br>
 								               </div>
 														 </div>
 														 <div class="row">
-								             	<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-								                 <li>Final walk through of the concept</li>
+								             	<div class="col-lg-6 col-md-6 col-sm-6">
+								                 <li>Final walk through of the concept.</li>
 								                 <li>Devoted time working on strings! </li>
-								                 <li>The senior UX designers advised that the helper descriptions could be a list of available services or items rather than full sentence descriptions.</li><br>
-								                   <h4>Ready for testing</h4>
-								                 <img src="images/lexington.png" class="img-responsive" style="max-width:50%"><br><br><hr>
+								                 <li>The senior UX designers advised that the helper descriptions could be a list of available services or items rather than full sentence descriptions.</li></div>
+																       	<div class="col-lg-6 col-md-6 col-sm-6">
+								                 <img src="images/lexington.png" class="img-responsive center" style="max-width:100%"><br><br><br><br><br><br>
 								               </div>
 								             </div>
 													 </div>
@@ -476,10 +487,10 @@
 								                 </div>
 																 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <h4>User testing of new design showed a 36% improvement!</h4>
-								                   <img src="images/newdata.png" class="img-responsive" style="max-width:50%"><br>
+								                   <img src="images/newdata.png" class="img-responsive" style="max-width:60%"><br>
 
 								                   <h4>Concern</h4>
-								                   <p>Goal #9 had a lower success rate this time around when compared to the old design. People who failed the task stated that the wrongfully submitted form never indicated to them that they were in the wrong location. I made sure to incorporate that feedback in the last round of revisions before developer hand-off.</p><br><br><hr>
+								                   <p>Goal #9 had a lower success rate this time around when compared to the old design. People who failed the task stated that the wrongfully submitted form never indicated to them that they were in the wrong location. I made sure to incorporate that feedback in the last round of revisions before developer hand-off.</p><br><br><br><br>
 
 								                 </div>
 								               </div>
@@ -490,7 +501,7 @@
 								               <div class="container">
 																 <div class="row">
 																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                     <h3><br><br>Takeaways</h3>
+								                     <h3><br><br><br>Takeaways</h3>
 								                   </div>
 																	 <div class="col-lg-12 col-md-12 col-sm-12">
 
@@ -501,7 +512,7 @@
 								                   <li>Always keep in mind that you are designing for people. People prefer simplicity and clarity.</li>
 								                   <li>Communicate frequently with developers about the specifics.</li>
 								                   <li>When users are involved in the design process either throug testing or other research methods, results are better.</li>
-								                   <li> Always iterate!</li>
+								                   <li> Always iterate!</li><br><br><br><br><br>
 
 
 
