--- a/cnbc.html
+++ b/cnbc.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144593656-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-144593656-1');
+	</script>
+
 	<!-- SITE TITLE -->
 	<title>CNBC</title>
 
