--- a/lexmark.html
+++ b/lexmark.html
@@ -482,7 +482,7 @@
 													 	<div class="container">
 													 		<div class="row">
 													 			<div class="col-md-12 col-sm-12 text-center">
-													 				<h1 class="heading bold">Materialize</h1>
+													 				<h1 class="heading bold">Phase 3 of 3: Materialize</h1>
 																	</div>
 
 																</div>
