--- a/lexmark.html
+++ b/lexmark.html
@@ -86,7 +86,7 @@
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 						<h4 class="subheading">Tools & Skills</h4>
 						<h5 style="font-family: 'Quicksand', sans-serif;">Design</h5>
-						<p>Adobe XD, Axure, Lo-fi & High-fi Prototyping, Documentation</p>
+						<p>Adobe XD, Axure, Lo-fi & High-fi Prototyping, Documentation for Developers</p>
 						<h5 style="font-family: 'Quicksand', sans-serif;">Research</h5>
 						<p>Interviews, Card Sorts, Usability Tests</p><br><br>
 					</div>
@@ -127,7 +127,7 @@
 				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay="0.6s">
 				 	<img src="images/lexmarkpersona2.png" alt= "Administrative Assistant">
 					<h4>Administrative Assistant</h4>
-					<p>"I would have to wait weeks before being notified I submitted the wrong form. The forms sound so similar"</p>
+					<p>"I would have to wait weeks before being notified I submitted the wrong form. It  is hard to tell the purpose of the forms"</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay=".8s">
 				<img src="images/lexmarkpersona3.png" alt= "ServiceNow Team">
@@ -383,18 +383,17 @@
 		<div class="col-lg-2 col-md-2 col-sm-2">
 <p>03</p>
 </div>
-<div class="row">
-<div class="col-lg-5 col-md-5 col-sm-5">
-<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
-<p>For the overall request selection process, the titles for each request were not clear or sometimes not representative of the request forms. For example, "Badge Reader-Security Lexington" request had more options besides a badge reader, but an employee would not know that from the current design.</p>
-</p>
-</div>
-<div class="col-lg-5 col-md-5 col-sm-5">
-<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
-<p>Came up with a design that had helper text(right image #3) for each request form.</p>
-</div>
+	<div class="col-lg-5 col-md-5 col-sm-5">
+		<h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4>
+		<p>For the overall request selection process, the titles for each request were not clear or sometimes not representative of the request forms. For example, "Badge Reader-Security Lexington" request had more options besides a badge reader, but an employee would not know that from the current design.</p>
+	</div>
+	<div class="col-lg-5 col-md-5 col-sm-5">
+		<h4 style="font-family: 'Quicksand', sans-serif;">New Design</h4>
+		<p>Came up with a design that had helper text(right image #3) for each request form.</p>
+	</div>
 </div>
 <br>
+<div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12">
 			<h4><br><br><br>In the new design, the most complex form can be submitted in four clicks rather than seven.</h4>
 
@@ -496,7 +495,7 @@
 								                 </div>
 																 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <h4>User testing of new design showed a 36% improvement!</h4>
-								                   <img src="images/newdata.png" class="img-responsive" style="max-width:60%"><br>
+								                   <img src="images/newdata.png" class="img-responsive" style="max-width:90%"><br>
 
 								                   <h4>Concern</h4>
 								                   <p>Goal #9 had a lower success rate this time around when compared to the old design. People who failed the task stated that the wrongfully submitted form never indicated to them that they were in the wrong location. I made sure to incorporate that feedback in the last round of revisions before developer hand-off.</p><br><br><br><br>
