--- a/vegout.html
+++ b/vegout.html
@@ -156,9 +156,11 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 							<h4 style="font-family: 'Quicksand', sans-serif;">Explore</h4>
 							<li>Ideating + Sketching</li>
-		          <li>Paper Prototyping + User Testing #1</li>
+		          <li>Paper Prototyping</li>
+							<li>User Testing #1</li>
 		          <li>Wireframes</li>
-		          <li>Digital Protype #1 + Usability Testing #2</li>
+		          <li>Digital Protype #1</li>
+							<li>User Testing #2</li>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".8s">
 							<h4 style="font-family: 'Quicksand', sans-serif;">Materialize</h4>
@@ -265,7 +267,7 @@
 				<div class="container">
 					<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12">
-								<br><br><br><h3>PERSONAS</h3>
+								<br><br><br><h3>PERSONAS + INTERVIEWS</h3>
 								<p><br>TAKEAWAY: There are many reasons to why people want to reduce their meat intake. There are many DIFFERENT KINDS of benefits to be reaped.</p>
 
             <img src="images/personas.png" class="img-responsive center" width="100%">
@@ -310,9 +312,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>Sketching</h3>
+					<h3>SKETCHING</h3>
 				</div>
-					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+					<div class="col-lg-12 col-md-12 col-sm-12">
 						<p>I spent significant time ideating and sketching potential solutions. I sketched eight potential solutions and pushing myself to be creative before narrowing it down to one solution for further exploration really helped me expand my boundaries.</p>
             <img src="images/sketching.jpg" class="img-responsive center" style="max-width:100%">
 		<p><br>TAKEAWAY: The solution does not need to be a mobile app. However, for the solution I had in mind, a mobile application would be the best choice because it is personal and users can easily access it. <br><br><br></p>
@@ -326,7 +328,7 @@
 									               <div class="container">
 																	 <div class="row">
 																	 <div class="col-lg-12 col-md-12 col-sm-12">
-																		 <h3><br><br><br>Paper Prototyping & User Testing</h3>
+																		 <h3><br><br><br>PAPER PROTOTYPING + USER TESTING</h3><br>
 									                   </div>
 																	 </div>
 																	 <div class="row">
@@ -339,8 +341,9 @@
 																	 </div>
 																	 <div class="row">
 																		 <div class="col-lg-12 col-md-12 col-sm-12">
+																			 <p style="font-family: 'Quicksand', sans-serif;">Findings</p>
 
-																			 <p>Findings<br>
+																			 <p>
 																			   <li>Although statistics representing benefits was informative, Users also wanted to see a visual representation.</li>
 																			   <li>The goal setting feature was capped to 15 days and Users were left without choice if they wanted to pursue a longer goal.</li>
 																			   <li>Users liked how they can choose with benefits would be displayed on their dashboard.</li>
@@ -363,8 +366,8 @@
   <section>
     <div class="container">
       <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-            <h3><br>Digital Prototyping + User Testing</h3>
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <h3><br>DIGITAL PROTOTYPING + USER TESTING</h3>
             <p>A lot of the usability issues from the paper prototypes were addressed in the first digital prototype. During debriefing, I attempted to get more feedback on the feelings and the product functions. The most common words used to describe my prototype were busy, engaging, responsive, overwhelming, and compelling.<br>TAKEAWAY: Although I tried simplifying the dashboard, it was not enough. It needs to be more simple & “sleek.” Usability issues are important but so is the overall feel and vibe of the product. Visual design needs more work.</p>
                 <br><br>
 
@@ -381,7 +384,7 @@
 																	</div>
 																	<div class="col-lg-12 col-md-12 col-sm-12">
 
-								                   <h3>Specify Design Context</h3>
+								                   <h3>SPECIFY DESIGN CONTEXT</h3>
 								                 </div>
 																 <div class="col-lg-12 col-md-12 col-sm-12">
 
@@ -403,14 +406,16 @@ Ethics of My Design: Functional, convenient, don’t contribute to alert fatigue
 <section>
 								             <div class="padding">
 								               <div class="container">
+																 <div class="row">
 																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                     <h3><br><br>Final Design</h3>
+								                     <h3><br><br>FINAL DESIGN</h3><br>
 								                   </div>
-																	 <div class="col-lg-12 col-md-12 col-sm-12">
+																 </div>
+																  <div class="row">
+																	 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
 
                                   <iframe width="853" class="center" height="480" src="https://www.youtube.com/embed/j_cDa_AR1wI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
+																	 </div>
 								                   </div>
 								               </div>
 								             </div>
