--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
 				 <a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out"></a>
 				 <!-- <div class="selectedprojects-des"> -->
 <h2>CNBC</h2>
-<h4>Group Project | UX Research</h4>
+<h4>Team Project | UX Research</h4>
 </div>
 
 <div class="content iso-box arvr col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fourth" onclick="location.href='garden.html'">
  <a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Garden</h2>
-<h4>Group Project | VR Design</h4>
+<h4>Team Project | VR Design</h4>
 </div>
 <div class="design content iso-box col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fifth" onclick="location.href='gintern.html'">
  <a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out"></a>
@@ -200,14 +200,14 @@
  <a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Comerica</h2>
-<h4>Group Project | UX Research</h4>
+<h4>Team Project | UX Research</h4>
 </div>
 
 <div class="content iso-box research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
  <a href="michiganmed.html" ><img src="images/michiganmed2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Michigan Med</h2>
-<h4>Group Project | UX Research</h4>
+<h4>Team Project | UX Research</h4>
 </div>
                			</div>
                		</div>
