--- a/cnbc.html
+++ b/cnbc.html
@@ -81,7 +81,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 						<h4 class="subheading">Team & Roles</h4>
-							<p>Michelle Kim, UX Researcher<br>
+							<p><mark>Michelle Kim, UX Researcher</mark><br>
 								Elissa Irhamy, Data Scientist<br>
 								Yin Yin, UX Engineer<br>
 								Surita Spigner, UX Writer<br>
@@ -453,7 +453,7 @@
 				</div>
 				</section>
 
-					
+
 
 
 													 <footer>
