--- a/garden.html
+++ b/garden.html
@@ -27,6 +27,8 @@
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
@@ -55,7 +57,16 @@
 	</div>
 </section>
 
-
+<section id="about">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 col-sm-12 text-center">
+				<h1 class="headingtitle bold">VR Garden</h1>
+				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Virtual Reality App - Google Cardboard</h5>
+			</div>
+		</div>
+	</div>
+</section>
 
 <!-- home section -->
 	<section id="veggarden">
@@ -65,82 +76,95 @@
 		</div>
 	</section>
 
-<!-- about section -->
+
 	<section id="about">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">VR Veg Garden</h1>
-					<h2 class="subheading">Course Project at the University of Michigan, School of Information, Nov 2019</h2>
-				</div>
-				<p> My group decided to create a virtual reality garden application that can be experienced with Google Cardboard. We each were responsible for different parts of the application.<br><br><br>
-					<img src="images/vrduties.png" alt="manager" width=80% class= "center">
-					.</p>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<hr>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-			</div>
+				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+						<h4 class="subheading">Team & Roles</h4>
+							<p><mark>Michelle Kim</mark> <span style="font-family: 'Quicksand', sans-serif;"><mark>Gaze/fuse triggered rotating watering jug interaction</mark></span>
+								Kara Dailey<br>
+								Caitlin Helgesen<br>
+								Corbet Griffith<br>
+								Chance Murphy<br>
+								Adrienne Royce<br><br>
+							</p>
 
+					</p>
+					</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+						<h4 class="subheading">Tools</h4>
+						<p>A-Frame, Javascript, Unity, C#</p>
+					</div>
+			</div>
+			<div class= "row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4 class="subheading">Project Context</h4>
+					<p> During Oct 2019, for a course project, my team created a virtual reality app that can be experienced through Google Cardboard. Each team member was responsible for a different part of the application. If you want to skip the process, the final prototype can be found <a href="#lexmark3">here</a>.<br><br><br>
+						<br>
+				</div>
+			</div>
+		</section>
+
+		<section id="lexmark1">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+										<br><br><br><h3 >PROBLEM STATEMENT</h3>
+									</div>
+									<div class="col-lg-12 col-md-12 col-sm-12">
+											<p>While many pick up gardening as a hobby, it can also combat much more serious issues than boredom such as food deserts. The NGA reports that “16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions.” Gardening can not only bring nutritional foods to families living in food deserts but often times, gardening is cheaper than going to the grocery markets to buy fresh or organic produce. Research proves that purchasing tomatoes from the store is significantly more expensive; 8 pounds at the grocery store at an average of $2.56 per pound, equates to a total of $20.48 per eight pounds, resulting in $16 in savings! GrowerTalks did a survey and learned that the top three reasons that make gardening difficult were time constraints, information and education, and space restraints. With the VR Gardening app, we hope to address these concerns. VR has the opportunity to breach an informational gap in learning how to garden. An essential function would be to provide a low-stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users. We believe that youth and college aged students will be more likely to use a solution like this in VR due to their literacy of technology while also having a higher opportunity of access to HUDs and headsets in general.
+											.<br><br><br><br></p>
+										</div>
+										<div>
+		</section>
+
+
+		<section id="about">
+				<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+						<h3>PHYSICAL PROTOTYPING</h3>
+						<br>
+						<iframe width="853" height="480" src="https://www.youtube.com/embed/-8hybQt8TqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<br>
+	  					<br>
+	  					<br><br>
+	  					<br></div>
+					</div>
+				</div>
+		</section>
 
 <!-- team section -->
-	<section>
+	<section id="lexmark3">
 		<div class="container">
 			<div class="row">
-				<div class="col">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 					<br><br><br>
-        	<h3>Final Prototype</h3><br><br><br>
+        	<h3>DIGITAL PROTOTYPE</h3><br>
       	</div>
 			</div>
-
 			<div class="row">
-      	<div class="col-lg-2">
+				<div class="col-lg-12 col-md-12 col-sm-12">
 					<iframe width="853" height="480" src="https://www.youtube.com/embed/tPkEyEUiCBk?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      	</div>
+					<br>
+					<br>
+					<br><br><br><br></div>
 			</div>
 		</div>
-
 	</section>
 
-
-	<section>
-		<div class="container">
-			<div class="row">
-					<div class="col">
-						<br><br><br>
-						<h3>Problem Statement</h3><br><br>
-					</div>
-											 <p>While many pick up gardening as a hobby, it can also combat much more serious issues than boredom such as food deserts. The NGA reports that “16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions.” Gardening can not only bring nutritional foods to families living in food deserts but often times, gardening is cheaper than going to the grocery markets to buy fresh or organic produce. Research proves that purchasing tomatoes from the store is significantly more expensive; 8 pounds at the grocery store at an average of $2.56 per pound, equates to a total of $20.48 per eight pounds, resulting in $16 in savings!
-							 GrowerTalks did a survey and learned that the top three reasons that make gardening difficult were time constraints, information and education, and space restraints. With the VR Gardening app, we hope to address these concerns. VR has the opportunity to breach an informational gap in learning how to garden. An essential function would be to provide a low-stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users. We believe that youth and college aged students will be more likely to use a solution like this in VR due to their literacy of technology while also having a higher opportunity of access to HUDs and headsets in general.<br></p>
-				               <br><br><br><hr>
-
-	    </div>
-	  </div>
-	</section>
-
-<section>
 								             <div class="padding">
 								               <div class="container">
-								                   <div class="col">
-								                     <h3><br><br>Takeaways</h3><br><br>
+																 <div class="row">
+																 <div class="col-lg-12 col-md-12 col-sm-12">
+								                     <h3><br><br>Lessons Learned</h3><br>
 								                   </div>
-								                   <div class="col">
-
-
+																	 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <li>A basic understanding coding languages, especially HTML, CSS, and Javascript is required for AFrame in order to create elements, while it will help with interactions in both AFrame and Unity. </li>
 								                   <li>We all also had to learn how to position elements on a 3D axis for a virtual reality  environment rather than a 2D web page or application like we are currently used to doing in our other UX classes or at work.</li>
 								                   <li>We were surprised to learn that the proportions were completely different when using an Oculus headset.  What looked like a  proportional garden shed in AFrame appeared to be a tiny playhouse that was dwarfed by 10ft plants.  Going through this exercise, we realized that digital prototyping isn’t just a one size fits all activity.</li>
-
-
-
-
 								                   </div>
 								               </div>
 								             </div>
