--- a/garden.html
+++ b/garden.html
@@ -101,7 +101,7 @@
 			<div class= "row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4 class="subheading">Project Context</h4>
-					<p> During Oct 2019, for a course project, my team created a virtual reality app that can be experienced through Google Cardboard. Each team member was responsible for a different part of the application. If you want to skip the process, the final prototype can be found <a href="#lexmark3">here</a>.<br><br><br>
+					<p> During Oct 2019, for a course project, my team created a virtual reality app that can be experienced through Google Cardboard. Each team member was responsible for a different part of the application. My role is highlighted above. If you want to skip the process, the video of the final prototype can be found <a href="#lexmark3">here</a>.<br><br><br>
 						<br>
 				</div>
 			</div>
@@ -114,20 +114,58 @@
 										<br><br><br><h3 >PROBLEM STATEMENT</h3>
 									</div>
 									<div class="col-lg-12 col-md-12 col-sm-12">
-											<p>While many pick up gardening as a hobby, it can also combat much more serious issues than boredom such as food deserts. The NGA reports that “16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions.” Gardening can not only bring nutritional foods to families living in food deserts but often times, gardening is cheaper than going to the grocery markets to buy fresh or organic produce. Research proves that purchasing tomatoes from the store is significantly more expensive; 8 pounds at the grocery store at an average of $2.56 per pound, equates to a total of $20.48 per eight pounds, resulting in $16 in savings! GrowerTalks did a survey and learned that the top three reasons that make gardening difficult were time constraints, information and education, and space restraints. With the VR Gardening app, we hope to address these concerns. VR has the opportunity to breach an informational gap in learning how to garden. An essential function would be to provide a low-stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users. We believe that youth and college aged students will be more likely to use a solution like this in VR due to their literacy of technology while also having a higher opportunity of access to HUDs and headsets in general.
-											.<br><br><br><br></p>
+											<p>	16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions (NGA). <p>
+												<li>Gardening can bring nutritional foods to families living in food deserts.</li>
+												<li>Gardening is cheaper than going to the grocery markets to buy fresh or organic produce.</li>
+										<br><br><br><br></p>
+										</div>
+										<div>
+		</section>
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+										<br><br><br><h3 >WHY VR?</h3>
+									</div>
+									<div class="col-lg-12 col-md-12 col-sm-12">
+											<p>	A virtual reality experience has the opportunity to breach an informational gap in learning how to garden.<p>
+												<li>Provide a low stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users.</li>
+												<li>The immersive nature of VR will help users consider if gardening can realistically be adopted into their everyday life.</li>
+										<br><br><br><br></p>
 										</div>
 										<div>
 		</section>
 
+		<section id="lexmark2">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+										<br><br><br><h3>IDEATION: PHYSICAL PROTOTYPING</h3>
+									</div>
+									<div class="col-lg-12 col-md-12 col-sm-12">
+										<p>We decided to begin with 360 grid paper templates and modeling clay for physical prototyping. Sketching and physically prototyping our virtual reality experience helped us narrow our scope by giving us an idea about what parts of the environment and what kinds of interactions will be absolutely necessary to address our problem.</p><br>
+										<h4> Main Takeaways</h4>
+										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Included Interactions</h5>
+										<li>Gaze/fuse triggered rotating watering can</li>
+										<li>Gaze/fuse triggered shovel interaction</li>
+										<li>Picking of tomatoes</li><br>
+										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Why these interactions?</h5>
+										<p>Our VR app was meant to be as realistic as possible and we wanted to educate users on how often or how much specific plants need to be watered. We wanted to include a shoveling interaction because preparing soil is also standard for all gardening and we wanted to convey that. </p><br>
+												<iframe width="853" height="480" src="https://www.youtube.com/embed/-8hybQt8TqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<br><br><br><br></p>
+										</div>
+										<div>
+		</section>
 
 		<section id="about">
 				<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>PHYSICAL PROTOTYPING</h3>
+						<h3>CONSIDERATIONS FOR DIGITAL PROTOTYPING</h3>
 						<br>
-						<iframe width="853" height="480" src="https://www.youtube.com/embed/-8hybQt8TqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<p>VR experiences aim to replace users' current realities. So Increase immersion by helping users feel they are in control, have autonomy, and aid them in establishing a successful presence in the VR world.</p>
+						<li>Involve realistic lighting and sounds to entertain users' senses.</li>
+						<li>Make the VR interactions meet user expectations (interactions are predictable and believable).</li>
 							<br>
 	  					<br>
 	  					<br><br>
@@ -142,16 +180,14 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<br><br><br>
-        	<h3>DIGITAL PROTOTYPE</h3><br>
+        	<h3> DELIVERABLE: VIDEO OF FINAL DIGITAL PROTOTYPE</h3><br>
       	</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<iframe width="853" height="480" src="https://www.youtube.com/embed/tPkEyEUiCBk?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<br>
-					<br>
-					<br><br><br><br></div>
-			</div>
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<p>Although I started with Unity, for the final project, we decided to use A-Frame because A-Frame was much more friendly to designers without an intense programming background. For Unity, I had to learn C# for over a week to be able to code a simple interaction, but to protoype in A-Frame, the only required language was html and javascript.</p><br>
+			<iframe width="853" height="480" src="https://www.youtube.com/embed/tPkEyEUiCBk?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<br><br><br><br></p>
+				</div>
+				<div>
 		</div>
 	</section>
 
@@ -159,12 +195,13 @@
 								               <div class="container">
 																 <div class="row">
 																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                     <h3><br><br>Lessons Learned</h3><br>
+								                     <h3><br><br>MAIN TAKEAWAYS</h3><br>
 								                   </div>
 																	 <div class="col-lg-12 col-md-12 col-sm-12">
-								                   <li>A basic understanding coding languages, especially HTML, CSS, and Javascript is required for AFrame in order to create elements, while it will help with interactions in both AFrame and Unity. </li>
-								                   <li>We all also had to learn how to position elements on a 3D axis for a virtual reality  environment rather than a 2D web page or application like we are currently used to doing in our other UX classes or at work.</li>
-								                   <li>We were surprised to learn that the proportions were completely different when using an Oculus headset.  What looked like a  proportional garden shed in AFrame appeared to be a tiny playhouse that was dwarfed by 10ft plants.  Going through this exercise, we realized that digital prototyping isn’t just a one size fits all activity.</li>
+															 				<p>1. Design for probabilistic areas of user attention based on ergonomic data because designers cannot control what the audience is seeing.</p>
+																			<p>2. Ensure that users feel they are in control because VR experiences usually involve a lot of physical movement and therefore stability should be a priority otherwise there can be multiple negative physical reactions such as motion sickness.</p>
+								                   <p>3. A basic understanding coding languages, especially HTML, CSS, and Javascript is required for AFrame in order to create elements. </p>
+								                   <p>4. Learning how to position elements on a 3D axis for a virtual reality environment rather than a 2D web page or application is important.</li>
 								                   </div>
 								               </div>
 								             </div>
