--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
 <h2>Garden</h2>
 <h4>Team Project | VR Design</h4>
 </div>
+<div class="content iso-box arvr col-lg-6 col-md-6 col-sm-6 col-xs-6" id="eighth" onclick="location.href='garden.html'">
+ <a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out"></a>
+ <!-- <div class="selectedprojects-des"> -->
+<h2>Garden</h2>
+<h4>Team Project | AR Design</h4>
+</div>
 <div class="design content iso-box col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fifth" onclick="location.href='gintern.html'">
  <a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
