--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
 
-               		<div class="wow fadeIn" data-wow-delay="0.6s">
+               		<div class="wow fadeIn" data-wow-delay="0.4s">
                			<div class="iso-box-wrapper col4-iso-box">
 											<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="second" onclick="location.href='lexmark.html'">
 											 <a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out"></a>
@@ -194,7 +194,7 @@
  <a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Garden</h2>
-<h4>Team Project | AR Design</h4>
+<h4>Course Project | AR Design</h4>
 </div>
 <div class="design content iso-box col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fifth" onclick="location.href='gintern.html'">
  <a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out"></a>
