--- a/brewary.html
+++ b/brewary.html
@@ -81,12 +81,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-						<h4 class="subheading">Team & Roles</h4>
-							<p><mark>Michelle Kim</mark> <span style="font-family: 'Quicksand', sans-serif;"><mark>Beer can triggered interaction, markerless ID triggered interaction</mark></span>
-								Harsh Desai<br>
-								Corbet Griffith<br>
-								Chance Murphy<br>
-								Adrienne Royce<br><br>
+						<h4 class="subheading">Role</h4>
+							<p>AR Designer, Nov 2019<br><br>
 							</p>
 
 					</p>
@@ -100,7 +96,10 @@
 			<div class= "row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4 class="subheading">Project Context</h4>
-					<p> During Nov 2019, for a course project, my team created an augmented reality app that can be used during a brewery tour. Each team member was responsible for a different part of the application. If you want to skip the process, the final prototype can be found <a href="#lexmark3">here</a>.<br><br><br>
+					<p>I created an augmented reality app that can be used during a brewery tour.<br>
+					My app is capable of two interactions:
+					<li>Recognize a beer can and display information about that beer</li>
+					<li>Recognize people's IDs and calculate if someone is of age to purchase alcohol</li><br><br><br>
 						<br>
 				</div>
 			</div>
@@ -113,22 +112,56 @@
 										<br><br><br><h3 >PROBLEM STATEMENT</h3>
 									</div>
 									<div class="col-lg-12 col-md-12 col-sm-12">
-											<p>While many pick up gardening as a hobby, it can also combat much more serious issues than boredom such as food deserts. The NGA reports that “16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions.” Gardening can not only bring nutritional foods to families living in food deserts but often times, gardening is cheaper than going to the grocery markets to buy fresh or organic produce. Research proves that purchasing tomatoes from the store is significantly more expensive; 8 pounds at the grocery store at an average of $2.56 per pound, equates to a total of $20.48 per eight pounds, resulting in $16 in savings! GrowerTalks did a survey and learned that the top three reasons that make gardening difficult were time constraints, information and education, and space restraints. With the VR Gardening app, we hope to address these concerns. VR has the opportunity to breach an informational gap in learning how to garden. An essential function would be to provide a low-stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users. We believe that youth and college aged students will be more likely to use a solution like this in VR due to their literacy of technology while also having a higher opportunity of access to HUDs and headsets in general.
-											.<br><br><br><br></p>
+											<p>Beer making is an ancient and storied tradition. However in the United States for many decades it was reduced to purchasing Coors and Bud light in 12-packs at the grocery store. Thankfully, the tide has turned and an appreciation for the variety and nuance of the beverage has returned to rival the connoisseurship of wine. The AR app BrewARy is a tool for purveyors of beer to introduce their product and facilite it to consumers.<br><br><br><br></p>
 										</div>
 										<div>
 		</section>
 
+	</section>
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12">
+									<br><br><br><h3 >WHY AR?</h3>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12">
+										<p>	An augmented reality experience during a brewery tour has the opportunity to provide more ways to interact with the products and setting than a regular tour without the AR app. A visitor's experience is no longer limited to physical interactions but now includes digital ones as well.<p>
+											<li>AR interactions can help skip tedious tasks to achieve a goal because a quick recognition can trigger interactions. </li>
+											<li>An AR experience is never meant to replace a user's reality but rather enhance it.</li>
+									<br><br><br><br></p>
+									</div>
+									<div>
+	</section>
+
+		<section id="lexmark2">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+										<br><br><br><h3>IDEATION: PHYSICAL PROTOTYPING</h3>
+									</div>
+									<div class="col-lg-12 col-md-12 col-sm-12">
+										<p>We decided to begin with transparencies and templates for physical prototyping. Sketching and physically prototyping our virtual reality experience helped us narrow our scope by giving us an idea about what parts of the environment and what kinds of interactions will be absolutely necessary to address our problem.</p><br>
+										<h4> Main Takeaways</h4>
+										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Included Interactions</h5>
+										<li>Recognize a beer can and display information about that beer</li>
+										<li>Recognize people's IDs and calculate if someone is of age to purchase alcohol</li><br>
+										<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Why these interactions?</h5>
+										<p>I wanted to decrease the time it takes to search up information about interesting beers online and increase the time spent with the products, the beers, themselves during the tour. Additionally, age is a sensitive topic for many. I wanted to create an AR experience where someone's age did not have to be exposed but a bartender could still make sure that the consumer was of age to purchase alcohol.</p><br>
+												<iframe width="853" height="480" src="https://www.youtube.com/embed/-8hybQt8TqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<br><br><br><br></p>
+										</div>
+										<div>
+		</section>
 
 		<section id="about">
 				<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
-						<h3>PHYSICAL PROTOTYPING</h3>
+						<h3>CONSIDERATIONS FOR DIGITAL PROTOTYPING</h3>
 						<br>
-
-
-						<iframe width="853" height="480" src="https://www.youtube.com/embed/-8hybQt8TqQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<p>AR apps are meant to enhance the experience and not replace it. The app needs to work together with the real-physical environment instead of working independently with no consideration for the environment. </p>
+						<li>Make sure the AR interaction has a reason for it being AR and not the usual 2D interaction.</li>
+						<li>Consider the usefulness of each interaction. Is it just for fun or does the interaction actually have a use?</li>
 							<br>
 	  					<br>
 	  					<br><br>
@@ -143,16 +176,13 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 					<br><br><br>
-        	<h3>DIGITAL PROTOTYPE</h3><br>
+        	<h3> DELIVERABLE: VIDEO OF FINAL DIGITAL PROTOTYPE</h3><br>
       	</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<iframe width="853" height="480" src="https://www.youtube.com/embed/tPkEyEUiCBk?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<br>
-					<br>
-					<br><br><br><br></div>
-			</div>
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<p>The final prototype was built using Unity and Vuforia.</p><br>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/SMMWtcW10u4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>				<br><br><br><br></p>
+				</div>
+				<div>
 		</div>
 	</section>
 
@@ -160,12 +190,13 @@
 								               <div class="container">
 																 <div class="row">
 																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                     <h3><br><br>Lessons Learned</h3><br>
+								                     <h3><br><br>MAIN TAKEAWAYS</h3><br>
 								                   </div>
 																	 <div class="col-lg-12 col-md-12 col-sm-12">
-								                   <li>A basic understanding coding languages, especially HTML, CSS, and Javascript is required for AFrame in order to create elements, while it will help with interactions in both AFrame and Unity. </li>
-								                   <li>We all also had to learn how to position elements on a 3D axis for a virtual reality  environment rather than a 2D web page or application like we are currently used to doing in our other UX classes or at work.</li>
-								                   <li>We were surprised to learn that the proportions were completely different when using an Oculus headset.  What looked like a  proportional garden shed in AFrame appeared to be a tiny playhouse that was dwarfed by 10ft plants.  Going through this exercise, we realized that digital prototyping isn’t just a one size fits all activity.</li>
+															 				<p>1.</p>
+																			<p>2.</p>
+								                   <p>3.</p>
+								                   <p>4.</li>
 								                   </div>
 								               </div>
 								             </div>
