--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@
 				<h4>Passion Project | Product Design</h4>
 			</div>
 
+			<div class="content iso-box design research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="ninth" onclick="location.href='garden.html'">
+			 <a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out"></a>
+			 <!-- <div class="selectedprojects-des"> -->
+			<h2>PAWLS</h2>
+			<h4>Team Project | Product Design</h4>
+			</div>
+
 				<div class="research content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="third" onclick="location.href='cnbc.html'">
 				 <a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out"></a>
 				 <!-- <div class="selectedprojects-des"> -->
@@ -209,12 +216,11 @@
 <h4>Team Project | UX Research</h4>
 </div>
 
-<div class="content iso-box research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
+<!-- <div class="content iso-box research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
  <a href="michiganmed.html" ><img src="images/michiganmed2transparent.png" alt="Veg Out"></a>
- <!-- <div class="selectedprojects-des"> -->
 <h2>Michigan Med</h2>
 <h4>Team Project | UX Research</h4>
-</div>
+</div> -->
                			</div>
                		</div>
 
