--- a/pawls.html
+++ b/pawls.html
@@ -12,7 +12,7 @@
 	</script>
 
 	<!-- SITE TITLE -->
-	<title>CNBC</title>
+	<title>PAWLS</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -61,15 +61,15 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<h1 class="headingtitle bold">CNBC iOS App Usability Evaluation & Needs Assessment</h1>
-				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">UX Research - Mobile Platform</h5>
+				<h1 class="headingtitle bold">PAWLS</h1>
+				<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">Product Design - Mobile Platform + Pervasive Computing</h5>
 			</div>
 		</div>
 	</div>
 </section>
 
 <!-- home section -->
-	<section id="cnbc">
+	<section id="pawls">
 		<div class="container">
 			<div class="row">
 			</div>
@@ -81,21 +81,22 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 						<h4 class="subheading">Team & Roles</h4>
-							<p><mark>Michelle Kim</mark><span style="font-family: 'Quicksand', sans-serif;"><mark>UX Researcher</mark></span>
-								Elissa Irhamy <span style="font-family: 'Quicksand', sans-serif;">Data Scientist</span>
-								Yin Yin<span style="font-family: 'Quicksand', sans-serif;">UX Engineer</span>
-								Surita Spigner<span style="font-family: 'Quicksand', sans-serif;">UX Writer</span><br>
-								Jan - Apr 2019</p>
+							<p>	Sept - Dec 2019<br>
+								<mark>Michelle Kim</mark><span style="font-family: 'Quicksand', sans-serif;"><mark>Researcher & UX Designer</mark></span>
+								Corbet Griffith <span style="font-family: 'Quicksand', sans-serif;">Researcher & Hardware Engineer </span>
+								Shriya Hardiker<span style="font-family: 'Quicksand', sans-serif;">Researcher & Front End Engineer</span>
+								Surita Spigner<span style="font-family: 'Quicksand', sans-serif;">Research, Illustrator, & Video Editor</span><br></p>
 
 					</p>
 					</div>
 
+
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 						<h4 class="subheading">Tools & Skills</h4>
 						<h5 style="font-family: 'Quicksand', sans-serif;">Design</h5>
-						<p>Adobe Illustrator, Interaction Map, Personas, Scenarios, Heuristics Evaluation</p>
+						<p>Figma (I was solely responsible for the mobile app design)</p>
 						<h5 style="font-family: 'Quicksand', sans-serif;">Research</h5>
-						<p>Preference Testing (A/B Testing), Interviews, Usability Testing, Surveys, Competitive Analysis</p><br><br>
+						<p>Diary Study, Interviews, User Enactments, Surveys, Literature Reviews, Affinity Maps</p><br><br>
 					</div>
 			</div>
 			<div class= "row">
