--- a/index.html
+++ b/index.html
@@ -181,21 +181,21 @@
 			 <a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out"></a>
 			 <!-- <div class="selectedprojects-des"> -->
 			<h2>PAWLS</h2>
-			<h4>Team Project | Product Design</h4>
+			<h4>Course Project | Product Design</h4>
 			</div>
 
 				<div class="research content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="third" onclick="location.href='cnbc.html'">
 				 <a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out"></a>
 				 <!-- <div class="selectedprojects-des"> -->
 <h2>CNBC</h2>
-<h4>Team Project | UX Research</h4>
+<h4>Client Project | UX Research</h4>
 </div>
 
 <div class="content iso-box arvr col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fourth" onclick="location.href='garden.html'">
  <a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Garden</h2>
-<h4>Team Project | VR Design</h4>
+<h4>Course Project | VR Design</h4>
 </div>
 <div class="content iso-box arvr col-lg-6 col-md-6 col-sm-6 col-xs-6" id="eighth" onclick="location.href='garden.html'">
  <a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out"></a>
@@ -213,7 +213,7 @@
  <a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Comerica</h2>
-<h4>Team Project | UX Research</h4>
+<h4>Client Project | UX Research</h4>
 </div>
 
 <!-- <div class="content iso-box research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
