--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
 
@@ -163,53 +164,53 @@
 
                		<div class="wow fadeIn" data-wow-delay="0.4s">
                			<div class="iso-box-wrapper col4-iso-box">
-											<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="second" onclick="location.href='lexmark.html'">
+											<div class="content iso-box design col-lg-4 col-md-6 col-sm-6 col-xs-12" id="second" onclick="location.href='lexmark.html'">
 											 <a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out"></a>
 											 <!-- <div class="selectedprojects-des"> -->
 			 <h2>Lexmark</h2>
 			 <h4>Internship | UX Design</h4>
 		 </div>
 
-               				 <div class="left content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="first" onclick="location.href='vegout.html'">
+               				 <div class="left content iso-box design col-lg-4 col-md-6 col-sm-6 col-xs-12" id="first" onclick="location.href='vegout.html'">
                				 	<a href="vegout.html" data-lightbox-gallery="portfolio-gallery"><img src="images/vegouttransparent.png" alt="Veg Out"></a>
 												<!-- <div class="selectedprojects-des"> -->
 				<h2>Veg Out</h2>
 				<h4>Passion Project | Product Design</h4>
 			</div>
 
-			<div class="content iso-box design research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="ninth" onclick="location.href='garden.html'">
+			<div class="content iso-box design research col-lg-4 col-md-6 col-sm-6 col-xs-12" id="ninth" onclick="location.href='garden.html'">
 			 <a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out"></a>
 			 <!-- <div class="selectedprojects-des"> -->
 			<h2>PAWLS</h2>
 			<h4>Course Project | Product Design</h4>
 			</div>
 
-				<div class="research content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="third" onclick="location.href='cnbc.html'">
+				<div class="research content iso-box design col-lg-4 col-md-6 col-sm-6 col-xs-12" id="third" onclick="location.href='cnbc.html'">
 				 <a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out"></a>
 				 <!-- <div class="selectedprojects-des"> -->
 <h2>CNBC</h2>
 <h4>Client Project | UX Research</h4>
 </div>
 
-<div class="content iso-box arvr col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fourth" onclick="location.href='garden.html'">
+<div class="content iso-box arvr col-lg-4 col-md-6 col-sm-6 col-xs-12" id="fourth" onclick="location.href='garden.html'">
  <a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Garden</h2>
 <h4>Course Project | VR Design</h4>
 </div>
-<div class="content iso-box arvr col-lg-6 col-md-6 col-sm-6 col-xs-6" id="eighth" onclick="location.href='garden.html'">
+<div class="content iso-box arvr col-lg-4 col-md-6 col-sm-6 col-xs-12" id="eighth" onclick="location.href='garden.html'">
  <a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Garden</h2>
 <h4>Course Project | AR Design</h4>
 </div>
-<div class="design content iso-box col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fifth" onclick="location.href='gintern.html'">
+<div class="design content iso-box col-lg-4 col-md-6 col-sm-6 col-xs-12" id="fifth" onclick="location.href='gintern.html'">
  <a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Uvent</h2>
 <h4>Google Design Challenge | UX Design</h4>
 </div>
-<div class="research content iso-box col-lg-6 col-md-6 col-sm-6 col-xs-6" id="sixth" onclick="location.href='comerica.html'">
+<div class="research content iso-box col-lg-4 col-md-6 col-sm-6 col-xs-12" id="sixth" onclick="location.href='comerica.html'">
  <a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Comerica</h2>
