--- a/brewary.html
+++ b/brewary.html
@@ -194,10 +194,8 @@
 								                     <h3><br><br>MAIN TAKEAWAYS</h3><br>
 								                   </div>
 																	 <div class="col-lg-12 col-md-12 col-sm-12">
-															 				<p>1.To </p>
-																			<p>2. Be</p>
-								                   <p>3. Continued</p>
-								                   <p>4.</li>
+															 				<p>1.AR is meant to work with the environment to provide an experience.</p>
+																			<p>2. Make sure the interactions necessitate them being in AR.</p>
 								                   </div>
 								               </div>
 								             </div>
